# mani

./: Cargo.toml  README.md  Settings.yaml
src/: base64.rs  main.rs  models.rs  settings.rs
