[package]
name = "mani"
version = "0.1.0"
authors = ["Benjamin Quinn <benjamin.quinn92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["rustls"] }
actix-http = "2.2.0"
env_logger = "0.8.2"
serde = "1.0.123"
serde_json = "1.0.62"
serde_tuple = "0.5.0"
log = "0.4.14"
futures = "0.3.12"
http = "0.2.3"
awc = "2.0.3"
base64 = "0.13.0"
bytes = "0.5.6"
